Fix hero height on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -111,6 +111,7 @@ p a:hover {
     .hero {
         width: 85%;
         margin: auto;
+        min-height: 100vh;
     }
 
     .hero-title {
